--- a/index.html
+++ b/index.html
@@ -62,23 +62,35 @@
     <!--___ start hero ____-->
     <section class="hero">
         <div class="container">
-            <div class="row justify-content-center align-items-center min-vh-100">
+            <div class="row cover ">
                 <div class="col-lg-6 col-md-6">
                     <h1>Transforme sua <span>presença digital</span> com a nossa agência criativa</h1>
                     <p>Com uma equipe altamente capacitada e uma paixão pelo que fazemos, trabalhamos com dedicação para entender as necessidades de nossos clientes e fornecer soluções personalizadas que ajudem a alcançar seus objetivos.</p>
                     <a href="#" class="btn btn-default">Saiba mais</a>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <img src="./assets/images/hero-img.svg" alt="" class="img-fluid">
+                <div class="col-lg-6 col-md-6 bg-body-tertiary rounded">
+                    <img src="./assets/images/hero-img.svg" alt="" class="img-fluid ">
                 </div>
             </div>
         </div>
     </section>
     <!--___ end hero ____-->
 
-    <!--___ start ____-->
+    <!--___ start featured ____-->
+    <section class="featured">
+      <div class="container">
+        <div class="row cover">
+          <div class="col-lg-6 col-md-6 bg-body-tertiary rounded">
+            <img src="./assets/images/feature-img.svg" alt="">
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <h1></h1>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <!--___ end  ____-->
+    <!--___ end  featured ____-->
 
     <!--___ start ____-->
 
