--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                   </li>
                 </ul>
                 <div class="media-social">
-                    <i class="fa-solid fa-moon"></i>
-                    <i class="fa-solid fa-sun"></i>
+                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-brands fa-telegram"></i>
+                  <i class="fa-brands fa-linkedin"></i>
                 </div>
 
               </div>
@@ -69,22 +70,37 @@
                     <a href="#" class="btn btn-default">Saiba mais</a>
                 </div>
                 <div class="col-lg-6 col-md-6 bg-body-tertiary rounded">
-                    <img src="./assets/images/hero-img.svg" alt="" class="img-fluid ">
+                    <img src="./assets/images/img-01.svg" alt="" class="img-fluid ">
                 </div>
             </div>
         </div>
     </section>
     <!--___ end hero ____-->
-
+    <!--divisor-->
+    <div class="d-flex bg-dark" style="height: 2px;">
+      <div class="hr">
+      </div>
+    </div>
     <!--___ start featured ____-->
     <section class="featured">
-      <div class="container">
+      <div class="container-fluid ">
         <div class="row cover">
-          <div class="col-lg-6 col-md-6 bg-body-tertiary rounded">
-            <img src="./assets/images/feature-img.svg" alt="">
+          <h1>Torne-se uma marca inesquecível<br> com nossos serviços</h1>
+          <div class="col-lg-6 col-md-6 area">
+            <img src="./assets/images/img-02.svg" alt="" class="img-fluid">
           </div>
-          <div class="col-lg-6 col-md-6">
-            <h1></h1>
+          <div class="col-lg-6 col-md-6 area ">
+            <h3 class="">Oferecemos uma ampla gama de serviços<br> para ajudar nossos clientes</h3>
+            <div class="list-group p-5">
+              <button type="button" class="list-group-item list-group-item-action"><i class="fa-solid fa-store me-3"></i>E-commerce - desenvolvimento de lojas virtuais</button>
+              <button type="button" class="list-group-item list-group-item-action"><i class="fa-solid fa-code me-3"></i>Desenvolvimento Web - criação de sites otimizados</button>
+              <button type="button" class="list-group-item list-group-item-action"><i class="fa-solid fa-photo-film me-3"></i>Marketing por E-mail - campanhas de e-mail marketing</button>
+              <button type="button" class="list-group-item list-group-item-action" ><i class="fa-solid fa-thumbs-up me-3"></i>Mídia Social - gerenciamento de redes sociais</button>
+              <button type="button" class="list-group-item list-group-item-action" ><i class="fa-solid fa-magnifying-glass me-3"></i>Search Engine Optimization (SEO) - otimização para motores de busca</button>
+              <button type="button" class="list-group-item list-group-item-action" ><i class="fa-solid fa-marker me-3"></i>Marketing de Conteúdo - criação de conteúdo estratégico</button>
+
+            </div>
+            
           </div>
         </div>
       </div>
