--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <title>GrowthHackers</title>
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar">
     <!--___ start header ____-->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg ">
+    <header class="header ">
+        <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
             <div class="container">
               <a class="navbar-brand" href="#">
              <span>Growth</span><i class="fa-brands fa-linux"></i>
@@ -61,7 +61,7 @@
     <!--___ end header ____-->
 
     <!--___ start hero ____-->
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="container">
             <div class="row cover ">
                 <div class="col-lg-6 col-md-6">
@@ -77,10 +77,22 @@
     </section>
     <!--___ end hero ____-->
     <!--divisor-->
-    <div class="d-flex bg-dark" style="height: 2px;">
-      <div class="hr">
+   <section class="about" id="about">
+    <div class="container">
+      <div class="row  justify-content-between align-items-center text-center">
+        <div class="col-lg-4 col-md-6">
+          <h1>testando</h1>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <h1>testando</h1>
+        </div>
+        <div class="col-lg-4 col-md-6">
+         <h1>teste03</h1>
+        </div>
+
       </div>
     </div>
+   </section>
     <!--___ start featured ____-->
     <section class="featured">
       <div class="container-fluid ">
