--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <a class="nav-link" href="#about">sobre</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="#client">Cliente</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#project">projetos</a>
                   </li>
                   <li class="nav-item">
@@ -63,13 +66,13 @@
     <!--___ start hero ____-->
     <section class="hero" id="hero">
         <div class="container">
-            <div class="row cover  ">
+            <div class="row cover justify-content-between align-items-center ">
                 <div class="col-lg-6 col-md-6">
                     <h1>Transforme sua <span>presença digital</span> com a nossa agência criativa</h1>
                     <p>Com uma equipe altamente capacitada e uma paixão pelo que fazemos, trabalhamos com dedicação para entender as necessidades de nossos clientes e fornecer soluções personalizadas que ajudem a alcançar seus objetivos.</p>
                     <a href="#" class="btn btn-default">Saiba mais</a>
                 </div>
-                <div class="col-lg-6 col-md-6 bg-body-tertiary rounded">
+                <div class="col-lg-6 col-md-6 bg-body-tertiary">
                     <img src="./assets/images/img-01.svg" alt="" class="img-fluid ">
                 </div>
             </div>
@@ -79,20 +82,28 @@
     <!--divisor-->
    <section class="about" id="about">
     <div class="container">
-      <div class="row  justify-content-between align-items-center text-center">
-        <div class="col-lg-4 col-md-6">
-          <h1>testando</h1>
+      <div class="row justify-content-between">
+        <h1>Quem Somos</h1>
+        <div class="col-lg-5 col-md-6 about-box justify-content ">
+          <h4>Somos uma <span>agência de marketing digital</span>  que oferece soluções 
+            criativas e personalizadas para empresas que desejam aumentar 
+            sua presença on-line e alcançar seus objetivos de negócios.
+             Com anos de experiência no setor, nossa equipe altamente capacitada de
+              especialistas em marketing digital, designers e desenvolvedores
+               trabalha em estreita colaboração com nossos clientes para 
+               entender suas necessidades exclusivas e fornecer soluções 
+               que os ajudem a alcançar o sucesso.</h4>
+             <p></p>  
         </div>
-       
-        <div class="col-lg-4 col-md-6">
-         <h1>teste03</h1>
+        <div class="col-lg-6 col-md-6 about-box-2">
+
         </div>
 
       </div>
     </div>
    </section>
     <!--___ start featured ____-->
-    <section class="featured">
+    <section class="featured mt-5">
       <div class="container-fluid ">
         <div class="row cover">
           <h1>Torne-se uma marca inesquecível<br> com nossos serviços</h1>
